# QSim

notes/: QMW_Evolve_8.nb
qsim/: CMakeLists.txt
qsim/include/qsim/: QSimConstants.h  QSimController.h  QSimCoordinates.h  QSimMath.h  QSimModel.h  QSimView.h  WaveFunctionPresets.h  complex_colors.h
qsim/source/: QSimController.cpp  QSimMath.cpp  QSimModel.cpp  QSimView.cpp  WaveFunctionPresets.cpp  main.cpp  test_QSimMath.h
qsim/source/gsl/: gsl.h  gsl_complex.cpp  gsl_complex.h  gsl_constants.cpp  gsl_constants.h  gsl_fft_complex.cpp  gsl_fft_complex.h  gsl_math.cpp  gsl_math.h
qsim/test/: CMakeLists.txt  main.cpp  test_QSimMath.h
scripts/: build.bat  build.sh
